main: implemented internationalization (PT-BR and EN-NA) and update target sdk to from 33 to 34.