@@ -7,18 +7,24 @@ plugins {
 
 android {
     namespace 'com.leumas.superweather'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.leumas.superweather"
         minSdk 26
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
+        }
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
         }
     }
 
@@ -49,12 +55,32 @@ android {
 }
 
 dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    // For JUnit
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
+    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+
+// For Mockito
+    testImplementation 'org.mockito:mockito-core:3.11.2'
+    testImplementation 'org.mockito:mockito-inline:3.11.2'
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:3.2.0'
+
+// For Coroutines
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
+
+// For Turbine
+    testImplementation 'app.cash.turbine:turbine:0.6.1'
+
     def lifecycle_version = "2.5.1"
     def dagger_version = "2.44.2"
     def room_version = "2.2.0"
     def nav_version = "2.5.3"
     def fragment_version = "1.5.7"
     def permissionsDispatcherVersion = '4.8.0'
+
+    implementation 'androidx.compose.material3:material3:1.2.1'
 
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.jakewharton.timber:timber:5.0.1'
